# rgs

./: C++软光栅_随笔.docx  CMakeLists.txt  README.md
src/: Application.cpp  Application.h  Base.h  Framebuffer.cpp  Framebuffer.h  Main.cpp  Math.cpp  Math.h  WIndowsWindow.cpp  Window.cpp  Window.h  WindowsWindow.h
src/RGS/: Application.cpp  Application.h  Base.h  Framebuffer.cpp  Framebuffer.h  InputCodes.h  Main.cpp  Maths.cpp  Maths.h  Renderer.cpp  Renderer.h  WIndowsWindow.cpp  Window.cpp  Window.h  WindowsWindow.h
src/RGS/Shaders/: BlinnShader.cpp  BlinnShader.h  ShaderBase.h
